fix popup-bg z-index

--- a/public/css/tournament.css
+++ b/public/css/tournament.css
@@ -329,9 +329,10 @@
   width: 100%;
   height: 100%;
   cursor: default;
+  z-index: 300;
 }
 .match:focus, .match:focus-within {
-  z-index: 300;
+  z-index: 301;
   outline-style: none;
 }
 .popupContainer {
